--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,16 @@ h2 {
 }
 
 .projects {
+    display:flex; flex-wrap:wrap;
     color:cyan;
+}
+
+.project {
+    width: 30%;
+    margin: 10px;
+    padding: 20px 10px;
+    background: white;
+    border-radius: 25%;
 }
 
 .contact {
