--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ h2 {
     width: 30%;
     margin: 10px;
     padding: 20px 10px;
-    background: white;
+    background: rgb(58, 78, 131);
     border-radius: 25%;
 }
 
